[package]
name = "mill"
version = "0.1.0"
authors = ["Liu Xiaoyi <circuitcoder0@gmail.com>"]
edition = "2018"

[[bin]]
name = "mill-run"
path = "rust/main.rs"

[build-dependencies]
cmake = "0.1"
glob = "0.3"

[dependencies]
cxx = "0.4.7"
structopt = { version = "0.3.18", features = ["paw"] }
paw = "1.0.0"
env_logger = "0.7.1"
log = "0.4.11"
byteorder = "1.3.4"
anyhow = "1.0.32"
num_cpus = "1.13.0"
crossbeam-channel = "0.5.0"
indicatif = "0.15.0"
